--- a/src/components/Gallery/Gallery.module.css
+++ b/src/components/Gallery/Gallery.module.css
@@ -62,7 +62,6 @@
   z-index: 1000;
 }
 
-
 .modal {
   position: relative;
   background: white;
@@ -72,14 +71,19 @@
   max-height: 90%;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: left;
   color: #901C1C;
 }
 
 .modal img {
-  width: 80vw;
+  width: 60vw;
   max-height: 80vh;
   object-fit: contain;
+  border-radius: 5px;
+  pointer-events: none;
+}
+
+.modalImg {
   border-radius: 5px;
   pointer-events: none;
 }
