--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -3,7 +3,7 @@
   background-color: #901C1C;
   color: #fff;
   border: none;
-  padding: 10px 15px;
+  padding: 20px;
   cursor: pointer;
   font-size: 18px;
   font-weight: bold;
@@ -15,7 +15,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.6);
+  background: rgba(196, 196, 196, 0.4);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -59,7 +59,7 @@
 }
 
 .form label {
-  font-size: 24px;
+  font-size: 26px;
   color: #313131;
   margin-bottom: 5px;
 }
